updates to style

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "reactcalculator",
   "version": "0.1.0",
+  "engines": {
+    "node": "10.1.0"
+  },
   "private": true,
   "dependencies": {
     "react": "^16.5.2",
